fix mp action button spacing

--- a/www/docs/style/sass/app.scss
+++ b/www/docs/style/sass/app.scss
@@ -552,7 +552,9 @@ ul, li {
         padding-left: 0;
     }
     @media #{$small} {
-        padding: 1em;
+        &:nth-of-type(2) {
+            padding-right: 0.75em;
+        }
     }
 }
 
